--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,9 @@
 name: On push workflow
-on: [push]
+on:
+    pull_request:
+      branches:
+          - develop
+
 jobs:
     Test-something:
         runs-on: ubuntu-latest
