--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,7 +57,7 @@ jobs:
 
             - name: Update readme with status badge
               run: |
-                  sed -i "s|!\\[Build Status\\](.*)|![Build Status]($STATUS_BADGE_URL)|" README.md
+                  echo "![Build Status]($STATUS_BADGE_URL)" >> README.md
                   git config user.name "kaashntr"
                   git config user.email "kaashntr@github.com"
                   git add README.md
