--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,7 +57,7 @@ jobs:
                   git config user.email "kaashntr@github.com"
                   git add README.md
                   git commit -m "Update status badge in README"
-                  git push origin HEAD:main
+                  git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/kaashntr/Git-Actions.git
                   
 
             
